--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,4 +17,8 @@ jobs:
           pip install -r requirements.txt
       - name: Run tests
         run: |
-          pytest
+          pytest --cov=./
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}  # Set this in GitHub Secrets
