--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,20 +5,23 @@ on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.x'  # Update to the latest version, e.g., '3.11'
+
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
+
       - name: Run tests
         run: |
           pytest --cov=./
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}  # Set this in GitHub Secrets
+          token: ${{ secrets.CODECOV_TOKEN }}  # Ensure this secret is set in your repo
