--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy==1.21.0
-pandas>=1.3.0
-matplotlib==3.4.3
-scikit-learn==0.24.2
+# numpy==1.21.0
+# pandas>=1.3.0
+# matplotlib==3.4.3
+# scikit-learn==0.24.2
 pytest==6.2.5
 requests==2.26.0
 distutils
