--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,9 +17,9 @@ jobs:
         run: |
           pip install -r requirements.txt
 
-      - name: Run tests
-        run: |
-          pytest --cov=./
+      # - name: Run tests
+      #   run: |
+      #     pytest --cov=./
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
